--- a/css/less/calendar.less
+++ b/css/less/calendar.less
@@ -1,4 +1,5 @@
-
+@import './variables.less';
+@import './mixins.less';
 
 .js-calendar.js-calendar-inputs {
     border: 1px solid #ccc;
@@ -6,10 +7,17 @@
     padding: 6px 12px;
     border-radius: 4px;
     margin-bottom: 10px;
+    .box-sizing(border-box);
     .js-input {
         border: 0 none transparent;
         outline: none;
         color: #555;
+        font-family: @cal_font;
+    }
+    &.popup-open {
+        border: 1px solid @cal_hl_color;
+        .box-shadow(inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6));
+        .transition(border-color ease-in-out .15s, box-shadow ease-in-out .15s);
     }
 }
 .popover.js-calendar {
@@ -17,7 +25,7 @@
     max-width: 650px;
     // color: #fffeff;
     font-size: 13px;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; 
+    font-family: @cal_font;
     padding: 10px;
 
 
@@ -59,7 +67,7 @@
             padding: 0;
         }
         .suggestion {
-            background-color: #428bca;
+            background-color: @sugg_bg_color;
             border: 1px solid #357ebd;
             padding: 2px 5px;
             text-transform: capitalize;
@@ -89,11 +97,11 @@
             border-radius: 3px;
             padding: 6px;
             &.highlight {
-                background-color: #39b3d7;
+                background-color: @cal_bg_color;
                 color: #fffeff;
             }
             &:hover {
-                background-color: #32add0;
+                background-color: @cal_bg_color;
                 color: #fffeff;
             }
             &.disable {
