--- a/css/less/calendar.less
+++ b/css/less/calendar.less
@@ -1,5 +1,5 @@
 @import './variables.less';
-@import './mixins.less';
+@import 'mixins.less';
 
 .js-calendar.js-calendar-inputs {
     border: 1px solid #ccc;
@@ -16,8 +16,10 @@
     }
     &.popup-open {
         border: 1px solid @cal_hl_color;
-        .box-shadow(inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6));
-        .transition(border-color ease-in-out .15s, box-shadow ease-in-out .15s);
+        .box-shadow (inset 0 1px 1px rgba(0,0,0,.075));
+        .box-shadow (0 0 8px rgba(102,175,233,.6));
+        .transition(border-color ease-in-out .15s);
+        .transition(box-shadow ease-in-out .15s);
     }
 }
 .popover.js-calendar {
